# Property-Finder

./: .gitignore  README.md  docker-compose.yml  manage.py  pyproject.toml
adapter/: asgi.py  celery.py  kafka.py  wsgi.py
config/: asgi.py  tasks.py  urls.py  wsgi.py
config/django/: base.py  production.py  test.py
config/env_conf/: .env  env.py
config/settings/: celery.py  elasticsearch.py  kafka.py  sessions.py  swagger.py
docker/: beats_entrypoint.sh  celery_entrypoint.sh  local.Dockerfile  production.Dockerfile  web_entrypoint.sh
nginx/: Dockerfile  nginx.conf
pgbouncer/: pgbouncer.ini  userlist.txt
src/property_finder/: admin.py  apps.py  urls.py
src/property_finder/apis/v1/: agent.py  property.py  propetry_types.py  urls.py
src/property_finder/es/documents/: agent.py  property.py  property_type.py
src/property_finder/management/commands/: process_update_events.py
src/property_finder/migrations/: 0001_initial.py
src/property_finder/models/: __init__.py  agent.py  property.py
src/property_finder/models/django/: property.py
src/property_finder/models/documents/: agent.py
src/property_finder/models/es/: agent.py  property.py
src/property_finder/repositories/: __init__.py  agent_repo.py  base_repo.py  property_repo.py
src/property_finder/services/: agent_service.py  email_service.py  kafka_service.py  property_service.py
src/property_finder/signals/: agent.py  property.py
src/property_finder/tasks/: __init__.py  property_tasks.py  tasks.py  threads.py
src/property_finder/usecases/: __init__.py  agent.py  propetry.py
(+31 files in other folders)
