[tool.poetry]
name = "property_finder"
version = "0.1.0"
description = ""
authors = ["aliseylaneh <aliseylaneh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "5.1.4"
django-environ = "0.9.0"
psycopg2-binary = "2.9.9"
djangorestframework = "3.15.2"
celery = "5.2.7"
django-celery-results = "2.5.1"
django-celery-beat = "2.7.0"
whitenoise = "6.2.0"
django-filter = "22.1"
django-extensions = "3.2.1"
django-cors-headers = "3.13.0"
django-storages = "1.13.1"
drf-jwt = "1.19.2"
boto3 = "1.24.71"
attrs = "22.1.0"
drf-spectacular = "0.24.2"
django-redis = "5.2.0"
django-microservice-common = "0.2.1"
djangorestframework-camel-case = "1.4.2"
pydantic = "^2.7.0"
gunicorn = "^22.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
